--- a/raspored.html
+++ b/raspored.html
@@ -1,92 +1,150 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Kursevi IPI</title>
-    </head>
-    <body>
-        <a href="index.html">
-            <img src="slike/logo-ipi.png" alt="Kursevi IPI">
+<html lang="bs">
+  <head>
+    <meta charset="utf-8" />
+    <title>IPI Akademija – Raspored kurseva</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/izgled.css" />
+  </head>
+
+  <body>
+    <div class="page-wrapper">
+      <!-- GORNJI HEADER -->
+      <header class="top-header">
+        <a href="index.html" class="brand">
+          <img src="slike/logo-ipi.png" alt="IPI Akademija logo" />
+          <div class="brand-text">
+            <span class="brand-kicker">IPI AKADEMIJA</span>
+            <span class="brand-title">Program kurseva iz ICT oblasti</span>
+          </div>
         </a>
-        
-        <ul>
+      </header>
+
+      <!-- DONJI HEADER -->
+      <header class="nav-header">
+        <nav class="main-nav">
+          <ul>
             <li><a href="index.html">O kursevima</a></li>
             <li><a href="popis.html">Popis kurseva</a></li>
             <li><a href="raspored.html">Raspored kurseva</a></li>
-	    <li><a href="studentfunzone.html">Student Fun Zone</a></li>
+
+            <li class="has-dropdown">
+              <a href="studentfunzone.html" class="sfz-link is-active"
+                >Student Fun Zone</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="bingo.html">Bingo</a></li>
+                <li><a href="kviz.html">Kviz</a></li>
+                <li><a href="whiteboard.html">Interaktivni Whiteboard</a></li>
+                <li><a href="visual-board.html">Visual Board</a></li>
+                <li><a href="kanban-board.html">Kanban Board</a></li>
+              </ul>
+            </li>
+
             <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
-        
-		<h2>Raspored kurseva</h2>
-        <p>Objavljen je raspored kurseva za juni.</p>
-		<img src="slike/tecajevi2.jpg" alt="Tečajevi Srca">
-        <table border="1">
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <!-- HERO BOX -->
+        <article class="intro-article">
+          <div class="intro-text">
+            <h1>Raspored kurseva</h1>
+            <p>
+              Objavljen je raspored kurseva za tekući mjesec. Provjerite
+              termine, učionice i trajanje svakog programa u tabeli ispod.
+            </p>
+          </div>
+
+          <div class="intro-media">
+            <img src="slike/tecajevi2.jpg" alt="Grupa polaznika na kursu" />
+          </div>
+        </article>
+
+        <!-- tabela -->
+        <section>
+          <h2>Trenutni termini kurseva</h2>
+
+          <table>
             <tr>
-                <th>Tečaj</th>
-                <th>Šifra</th>
-                <th>Početak</th>
-                <th>Sat</th>
-                <th>Trajanje</th>
-                <th>Učionica</th>
+              <th>Tečaj</th>
+              <th>Šifra</th>
+              <th>Početak</th>
+              <th>Sat</th>
+              <th>Trajanje</th>
+              <th>Učionica</th>
             </tr>
+
             <tr>
-                <td>Uporaba baza podataka (Access)</td>
-                <td>E504</td>
-                <td>Ponedjeljak, 15.09.2014.</td>
-                <td>09:00</td>
-                <td>4 x 4</td>
-                <td>Srce-A</td>
+              <td>Uporaba baza podataka (Access)</td>
+              <td>E504</td>
+              <td>Ponedjeljak, 15.09.2014.</td>
+              <td>09:00</td>
+              <td>4 x 4</td>
+              <td>Srce-A</td>
             </tr>
+
             <tr>
-                <td>Obrada teksta (Word)</td>
-                <td>E304</td>
-                <td>Ponedjeljak, 15.09.2014.</td>
-                <td>17:30</td>
-                <td>4 x 4</td>
-                <td>Srce-B</td>
+              <td>Obrada teksta (Word)</td>
+              <td>E304</td>
+              <td>Ponedjeljak, 15.09.2014.</td>
+              <td>17:30</td>
+              <td>4 x 4</td>
+              <td>Srce-B</td>
             </tr>
+
             <tr>
-                <td>Wordionica ili kako oblikovati seminarski rad</td>
-                <td>R100</td>
-                <td>Četvrtak, 18.09.2014.</td>
-                <td>09:00</td>
-                <td>1 x 5</td>
-                <td>Srce-E1</td>
+              <td>Wordionica ili kako oblikovati seminarski rad</td>
+              <td>R100</td>
+              <td>Četvrtak, 18.09.2014.</td>
+              <td>09:00</td>
+              <td>1 x 5</td>
+              <td>Srce-E1</td>
             </tr>
+
             <tr>
-                <td>Prezentacije (PowerPoint)</td>
-                <td>E604</td>
-                <td>Subota, 20.09.2014.</td>
-                <td>09:00</td>
-                <td>2 x 6</td>
-                <td>Srce-B</td>
+              <td>Prezentacije (PowerPoint)</td>
+              <td>E604</td>
+              <td>Subota, 20.09.2014.</td>
+              <td>09:00</td>
+              <td>2 x 6</td>
+              <td>Srce-B</td>
             </tr>
+
             <tr>
-                <td>Proračunske tablice - napredna razina (Excel)</td>
-                <td>E414</td>
-                <td>Subota, 20.09.2014.</td>
-                <td>09:00</td>
-                <td>2 x 8</td>
-                <td>Srce-B</td>
+              <td>Proračunske tablice - napredna razina (Excel)</td>
+              <td>E414</td>
+              <td>Subota, 20.09.2014.</td>
+              <td>09:00</td>
+              <td>2 x 8</td>
+              <td>Srce-B</td>
             </tr>
+
             <tr>
-                <td>Baze podataka - napredna razina (Access)</td>
-                <td>E514</td>
-                <td>Ponedjeljak, 29.09.2014.</td>
-                <td>09:00</td>
-                <td>4 x 4</td>
-                <td>Srce-A</td>
+              <td>Baze podataka - napredna razina (Access)</td>
+              <td>E514</td>
+              <td>Ponedjeljak, 29.09.2014.</td>
+              <td>09:00</td>
+              <td>4 x 4</td>
+              <td>Srce-A</td>
             </tr>
+
             <tr>
-                <td>Exceliranje ili kako izraditi tablice, grafikone i formule</td>
-                <td>R200</td>
-                <td>Utorak, 30.09.2014.</td>
-                <td>09:00</td>
-                <td>1 x 5</td>
-                <td>Srce-E1</td>
+              <td>Exceliranje – izrada tablica, grafikona i formula</td>
+              <td>R200</td>
+              <td>Utorak, 30.09.2014.</td>
+              <td>09:00</td>
+              <td>1 x 5</td>
+              <td>Srce-E1</td>
             </tr>
-        </table>
-        <hr>
-        &copy; Internacionalna poslovno-informaciona akademija Tuzla
-    </body>
+          </table>
+        </section>
+      </main>
+
+      <footer class="site-footer">
+        <p>&copy; Internacionalna poslovno-informaciona akademija Tuzla</p>
+      </footer>
+    </div>
+  </body>
 </html>
