Dodata kontakt forma sa validacijom na kontakt stranici

--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
       </main>
 
       <footer class="site-footer">
-        <p>&copy; Internacionalna poslovno-informaciona akademija Tuzla</p>
+        <p>
+          &copy; Internacionalna poslovno-informaciona akademija Tuzla - Eldar
+          Dizdarevic
+        </p>
       </footer>
     </div>
   </body>
