Fix: Popravljeno ne-ucitavanje CSS-a

--- a/kanban-board.html
+++ b/kanban-board.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>IPI Akademija – Kanban Board | Student Fun Zone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/izgled.css" />
+    <link rel="stylesheet" href="css/izgled.css" />
 
     <!-- html2canvas za snimanje PNG (čisti JS lib, bez backend-a) -->
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
