--- a/kviz.html
+++ b/kviz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>IPI Akademija – Kviz | Student Fun Zone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/izgled.css" />
+    <link rel="stylesheet" href="css/izgled.css" />
   </head>
 
   <body>
