--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>IPI Akademija – Kursevi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/izgled.css" />
+    <link rel="stylesheet" href="css/izgled.css" />
   </head>
   <body>
     <div class="page-wrapper">
